# bevy_bird

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  release.toml  wasm-launcher-529fef3cc576dd2c.js  wasm-launcher-9e20990dac0bb558.js
.github/workflows/: build.yml  release-gh-pages.yml  release-native.yml  test.yml
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml
launchers/wasm/src/: main.rs
src/: lib.rs  main.rs
