[package]
name = "bevy_bird"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.14.0"
bevy_rapier2d = { version = "0.18.0", features = ["wasm-bindgen"] }
image = "0.24.9"
winit = "0.26.1"
rand = "0.8.5"
