[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
bevy_bird = { package = "bevy_bird", path = "../.." }
bevy = "0.8"
web-sys = { version="0.3.68", features=["Document", "Window"] }
yew = "0.21.0"
stylist = { version= "0.10.1", features=["yew_integration"] }
